--- a/ses4-selector.html
+++ b/ses4-selector.html
@@ -14,4 +14,21 @@
     <h1><center>การใช้งาน Selector</center></h1>
 
 </body>
+=======
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>การใช้งาน Selector</title>
+    <style>
+        h1{
+            color: bisque;
+        }
+    </style>
+</head>
+<body>
+    <h1><center>การใช้งาน Selector</center></h1>
+
+</body>
 </html>
