--- a/ses4-LanguagePseudo.html
+++ b/ses4-LanguagePseudo.html
@@ -22,4 +22,29 @@
     <p lang="es">Hola!</p>
     <p lang="th">สวัสดี</p>
 </body>
+=======
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>การเลือกเอลิเมนต์ด้วย Pseudo-Class Selector</title>
+    <style>
+      :dir(rtl){
+        background-color: beige;
+      }
+      p:lang(es){
+        background-color: rgb(255, 123, 0);
+      }
+    </style>
+    
+</head>
+<body>
+    <h1>การเลือกเอลิเมนต์ด้วย Pseudo-Class Selector</h1>
+    <div>Welcome to learn CSS Language</div>
+    <div dir="rtl">ברוכים הבאים ללמוד שפת CSS</div>
+    <p lang="en">Hollo!</p>
+    <p lang="es">Hola!</p>
+    <p lang="th">สวัสดี</p>
+</body>
 </html>
