--- a/ses4-LocationPsuedo.html
+++ b/ses4-LocationPsuedo.html
@@ -53,4 +53,60 @@
     <br>
     <br>
 </body>
+=======
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Location Psuedo-Class Selector</title>
+    <style>
+         /*a:link{ ลิ้งค์ที่ยังไม่คลิก 
+            color: chartreuse;
+        }*/
+         /*a:visited{ ลิ้งค์ที่คลิกแล้ว 
+            color: cadetblue;
+        }*/
+       a:any-link{
+            color: aquamarine;
+        } 
+        :target{
+            color: antiquewhite;
+        }
+    </style>
+</head>
+<body>
+    <h1>Location Psuedo-Class Selector</h1>
+    <a href="http://www.google.com">google</a><br>
+    <a href="http://www.kktech.ac.th">วิยาลัยเทคนิคขอนแก่น</a><br>
+    <a href="">test</a><br>
+    <a href="">222</a><br>
+    <a href="#bottom">ไปยังด้านล่าง</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p><b id="bottom">ด้านล่างอยู่นี่</b></p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</body>
 </html>
