--- a/ses4-UserActionPsuedo.html
+++ b/ses4-UserActionPsuedo.html
@@ -25,4 +25,32 @@
     <h1>การเลือกเอลิเมนต์ด้วย User Action Psuedo-Class</h1>
     <button>คลิก!!</button>
 </body>
+=======
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>การเลือกเอลิเมนต์ด้วย User Action Psuedo-Class</title>
+    <style>
+        button{
+            background-color: #666;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 3px;
+        }
+        button:hover{
+            background-color: #ddd;
+            color: black;
+        }
+        button:active{
+            background-color: rgb(56, 34, 5);
+            color: white;
+        }
+    </style>
+</head>
+<body>
+    <h1>การเลือกเอลิเมนต์ด้วย User Action Psuedo-Class</h1>
+    <button>คลิก!!</button>
+</body>
 </html>
